# multiarray

./: .gitignore  CMakelists.txt  README.md
source/: .array.h.swp  .arrayiterator.h.swp  .arraylayouts.h.swp  .multiarray.h.swp  TEMPscrap.cpp  array.h  arrayiterator.h  arraylayouts.h  functor.h  interpolator.h  main.cpp  multiarray.h  noninheritable.h  staticcheck.h  staticcontrolstructures.h
test/: .multiarraytest.cpp.swp  CMakeLists.txt  arraytest.cpp  iteratortest.cpp  multiarraytest.cpp
